--- a/src/main/resources/static/css/login.css
+++ b/src/main/resources/static/css/login.css
@@ -1,8 +1,3 @@
-
-body {
-    font-family: 'Microsoft YaHei', 微软雅黑, serif;
-}
-
 .login-box {
     position: relative;
     height: 500px;
@@ -10,9 +5,6 @@ body {
     background: #fff;
     padding: 60px 95px;
     margin-bottom: 20px;
-    /*padding: 10px;*/
-    /*margin-bottom: 30px;*/
-    /*background: #ddd;*/
 }
 .login-box .ad-pic {
     position: absolute;
@@ -30,7 +22,7 @@ body {
 .login-box .main {
     position: absolute;
     box-sizing: border-box;
-    width: 454px;
+   /* width: 454px;*/
     height: 375px;
     top: 60px;
     right: 95px;
@@ -202,15 +194,14 @@ body {
     transform: rotate(-20deg);
 }
 .login-box .login-form .lan-login .arms .arm.arm-r {
-    left: 160px;
+    left: 102px;
     -webkit-transform: rotate(20deg) scaleX(-1);
     -moz-transform: rotate(20deg) scaleX(-1);
     -o-transform: rotate(20deg) scaleX(-1);
     -ms-transform: rotate(20deg) scaleX(-1);
     transform: rotate(20deg) scaleX(-1);
 }
-@media all and (-webkit-min-device-pixel-ratio: 1.5), (min--moz-device-pixel-ratio: 1.5), (-o-min-device-pixel-ratio
-: 1.5/1), (min-device-pixel-ratio: 1.5), (min-resolution: 138dpi), (min-resolution: 1.5dppx) {
+@media all and (-webkit-min-device-pixel-ratio: 1.5), (min--moz-device-pixel-ratio: 1.5), (-o-min-device-pixel-ratio: 1.5/1), (min-device-pixel-ratio: 1.5), (min-resolution: 138dpi), (min-resolution: 1.5dppx) {
     .login-box .login-form .lan-login {
         background-image: url('../img/lan.png');
         -webkit-background-size: 98px 60px;
@@ -231,18 +222,18 @@ body {
     }
 }
 .login-box .login-form .lan-login.password .arms .arm {
-    -webkit-transform: translateY(35px) translateX(1px) scale(-0.5);
-    -moz-transform: translateY(35px) translateX(1px) scale(-0.5);
-    -o-transform:translateY(35px) translateX(1px) scale(-0.5);
-    -ms-transform: translateY(35px) translateX(1px) scale(-0.5);
-    transform: translateY(35px) translateX(1px) scale(-0.5);
+    -webkit-transform: translateY(-35px) translateX(26px);
+    -moz-transform: translateY(-35px) translateX(26px);
+    -o-transform: translateY(-35px) translateX(26px);
+    -ms-transform: translateY(-35px) translateX(26px);
+    transform: translateY(-35px) translateX(26px);
 }
 .login-box .login-form .lan-login.password .arms .arm.arm-r {
-    -webkit-transform:translateY(35px) translateX(1px) scale(-0.5);
-    -moz-transform: translateY(35px) translateX(1px) scale(-0.5);
-    -o-transform:translateY(35px) translateX(1px) scale(-0.5);
-    -ms-transform:translateY(35px) translateX(1px) scale(-0.5);
-    transform: translateY(35px) translateX(1px) scale(-0.5);
+    -webkit-transform: translateY(-35px) translateX(-32px) scaleX(-1);
+    -moz-transform: translateY(-35px) translateX(-32px) scaleX(-1);
+    -o-transform: translateY(-35px) translateX(-32px) scaleX(-1);
+    -ms-transform: translateY(-35px) translateX(-32px) scaleX(-1);
+    transform: translateY(-35px) translateX(-32px) scaleX(-1);
 }
 
 .login-box .login-user-tip {
